--- a/index.html
+++ b/index.html
@@ -107,9 +107,9 @@
         }
 
         .pictures-container img {
-            width: 100px;
-            height: 100px;
-            border-radius: 10px;
+            width: 150px; /* Increased size */
+            height: 150px; /* Increased size */
+            border-radius: 15px; /* Slightly larger border radius */
             box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.3);
         }
 
@@ -125,8 +125,8 @@
                 padding: 10px 20px;
             }
             .pictures-container img {
-                width: 80px;
-                height: 80px;
+                width: 120px; /* Smaller size for mobile */
+                height: 120px;
             }
             .cake-container {
                 width: 200px;
