--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <title>Happy Birthday Ren</title>
     <style>
         /* General Styling */
+        * {
+            box-sizing: border-box;
+        }
+
         body {
             margin: 0;
             padding: 0;
@@ -15,7 +19,7 @@
             background: url('KISS.jpg') no-repeat center center fixed;
             background-size: cover;
             height: 100vh;
-            overflow: hidden;
+            overflow: hidden; /* Prevent scrolling */
         }
 
         .content {
@@ -27,19 +31,19 @@
             align-items: center;
             height: 100vh;
             opacity: 0;
+            transform: translateY(20px); /* Slide-in effect */
             transition: opacity 1s ease-in-out, transform 1s ease-in-out;
-            transform: translateY(20px);
         }
 
         .content.show {
             display: flex;
             opacity: 1;
-            transform: translateY(0);
+            transform: translateY(0); /* Reset slide */
         }
 
         h1, p, button {
             opacity: 0;
-            animation: fade-in 1s forwards;
+            animation: fade-in 1s forwards ease-in-out;
         }
 
         h1 {
@@ -72,6 +76,30 @@
 
         button:hover {
             background: #ff1493;
+        }
+
+        @keyframes fade-in {
+            from {
+                opacity: 0;
+            }
+            to {
+                opacity: 1;
+            }
+        }
+
+        .pictures {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 20px;
+            justify-content: center;
+            margin-top: 20px;
+        }
+
+        .pictures img {
+            width: 300px;
+            height: auto;
+            border-radius: 10px;
+            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
         }
 
         .wish {
@@ -110,21 +138,6 @@
             text-shadow: 1px 1px 3px #000;
         }
 
-        .pictures {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 20px;
-            justify-content: center;
-            margin-top: 20px;
-        }
-
-        .pictures img {
-            width: 300px;
-            height: auto;
-            border-radius: 10px;
-            box-shadow: 0 5px 15px rgba(0, 0, 0, 0.5);
-        }
-
         #live-timer {
             position: fixed;
             bottom: 10px;
@@ -135,12 +148,6 @@
             border-radius: 8px;
             font-size: 14px;
             z-index: 9999;
-        }
-
-        @keyframes fade-in {
-            to {
-                opacity: 1;
-            }
         }
 
         @media screen and (max-width: 768px) {
@@ -158,8 +165,9 @@
             }
 
             .pictures img {
-                width: calc(100% - 40px);
-                max-width: 300px;
+                width: 100%; /* Ensure images are responsive */
+                max-width: 300px; /* Cap maximum width */
+                height: auto; /* Maintain aspect ratio */
             }
         }
     </style>
@@ -193,7 +201,7 @@
 
     <div class="content" id="page4">
         <h1>Happy Birthday Again, Ren ❤️</h1>
-        <p>Thank you for being a part of my life. I love you so much, and it breaks my heart that I couldn’t be with you on your special day. May God bless you and make all your wishes come true. You mean everything to me 💖🎂.</p>
+        <p>Thank you for being a part of my life. You mean everything to me 💖🎂.</p>
         <div class="wish">
             <input id="wishInput" type="text" placeholder="Type your wish here...">
             <button onclick="saveWish()">Send Wish</button>
@@ -211,7 +219,9 @@
         function goToNextPage(pageId) {
             document.querySelectorAll('.content').forEach(page => page.classList.remove('show'));
             const nextPage = document.getElementById(pageId);
-            nextPage.classList.add('show');
+            setTimeout(() => {
+                nextPage.classList.add('show');
+            }, 500); // Add slight delay for smoothness
         }
 
         function playMusic() {
