--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
 
     <div class="content" id="page4">
         <h1>Happy Birthday Again, Ren ❤️</h1>
-        <p>Thank you for being a part of my life. You mean everything to me 💖🎂.</p>
+        <p>Thank you for being a part of my life. I love you so much, and it breaks my heart that I couldn’t be with you on your special day. May God bless you and make all your wishes come true. You mean everything to me 💖🎂</p>
         <div class="wish">
             <input id="wishInput" type="text" placeholder="Type your wish here...">
             <button onclick="saveWish()">Send Wish</button>
